# 759_Final_Project

./: CMakeLists.txt  Dockerfile  README.md  main.cu  openbuildpack.sh
legacy/: main.cu
lyapunov_fractals/: lyapunov  lyapunov_fractal  lyapunov_fractal.cpp  lyapunov_fractal.h  lyapunov_main.cpp  reframe.cpp  reframe.h  render_cuda.cu  render_cuda.h
newton_fractals/: main_newton  main_newton.cpp  newton_fractal.cpp  newton_fractal.h  reframe.cpp  reframe.h  render_cuda.cu  render_cuda.h  test_newton_fractal.cpp  time_framing.cpp  time_framing.h  time_newton
